--- a/src/generic_ui/polymer/popup.html
+++ b/src/generic_ui/polymer/popup.html
@@ -16,13 +16,17 @@
 
   <link rel='import' href='ui.html'>
   <style>
+  @font-face {
+    font-family: eurostyle;
+    src: url('../styles/eurostile.ttf');
+  }
   body {
     position: relative;
     width: 371px; height: 600px;
     display: block;
     text-align: center;
     margin: 0;
-    font-family: sans-serif;
+    font-family: eurostyle, sans-serif;
     font-size: 13px;
     background-color: #eee;
   }
