--- a/src/generic_ui/polymer/ui.html
+++ b/src/generic_ui/polymer/ui.html
@@ -26,7 +26,7 @@
       }
     </style>
 
-    <uproxy-toolbar hidden?='{{SPLASH==view || !loggedIn}}'>
+    <uproxy-toolbar hidden?='{{ UI.View.SPLASH==ui.view || !loggedIn }}'>
       <uproxy-button id='btnGive'
           on-tap='{{ getMode }}'
           hidden?='{{ UI.Gestalt.GETTING == ui.gestalt }}'
@@ -48,19 +48,19 @@
     </uproxy-toolbar>
 
     <uproxy-splash id='splash'
-      class='{{ {active:(SPLASH==view)} | tokenList }}'>
+      class='{{ { active:(UI.View.SPLASH==ui.view) } | tokenList }}'>
     </uproxy-splash>
 
     <uproxy-networks id='networks'
-      class='{{ {active:(NETWORKS==view)} | tokenList }}'>
+      class='{{ { active:(UI.View.NETWORKS==ui.view) } | tokenList }}'>
     </uproxy-networks>
 
     <uproxy-settings id='settings'
-      class='{{ {active:(SETTINGS==view)} | tokenList }}'>
+      class='{{ { active:(UI.View.SETTINGS==ui.view) } | tokenList }}'>
     </uproxy-settings>
 
     <uproxy-roster id='roster'
-      class='{{ { active: (ROSTER==view), hidden: (SPLASH==view || !loggedIn) } | tokenList }}'>
+      class='{{ { active: (UI.View.ROSTER==ui.view), hidden: (UI.View.SPLASH==ui.view || !loggedIn) } | tokenList }}'>
     </uproxy-roster>
 
   </template>
