rename polymers ui to root to reduce confusion with generic ui.ts

--- a/src/generic_ui/polymer/popup.html
+++ b/src/generic_ui/polymer/popup.html
@@ -14,7 +14,7 @@
   <script src='../scripts/user.js'></script>
   <script src='../scripts/dependencies.js'></script>
 
-  <link rel='import' href='ui.html'>
+  <link rel='import' href='root.html'>
   <style>
   @font-face {
     font-family: eurostyle;
@@ -34,7 +34,7 @@
 </head>
 
 <body unresolved touch-action='auto'>
-  <uproxy-ui></uproxy-ui>
+  <uproxy-root></uproxy-root>
   <script src='popup.js'></script>
 </body>
 
