--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -6,7 +6,7 @@
 <link rel="import" href='settings.html'>
 <link rel="import" href='networks.html'>
 
-<polymer-element name='uproxy-ui' attributes='model'>
+<polymer-element name='uproxy-root' attributes='model'>
 
   <template>
     <style>
@@ -65,6 +65,6 @@
 
   </template>
 
-  <script src='ui.js'></script>
+  <script src='root.js'></script>
 
 </polymer-element>
