Add updateBytesInUI method; small fixes
- only show bytes transferred when proxying

--- a/src/generic_ui/polymer/instance.html
+++ b/src/generic_ui/polymer/instance.html
@@ -27,8 +27,8 @@
     </style>
 
     <span id='instanceId'>{{ instance.instanceId }}</span>
-    <span id='bytesSent'>{{ instance.bytesSent }}</span>
-    <span id='bytesReceived'>{{ instance.bytesReceived }}</span>
+    <div id='bytesSent' hidden?='{{ instance.bytesSent == 0 }}'>Bytes Sent: {{ instance.bytesSent }}</div>
+    <div id='bytesReceived' hidden?='{{ instance.bytesReceived == 0 }}'>Bytes Received: {{ instance.bytesReceived }}</div>
 
     <div hidden?='{{ UI.Gestalt.GIVING == ui.gestalt }}'>
 
@@ -61,7 +61,7 @@
         <button on-tap='{{ ignoreOffer }}'>Decline</button>
         <p>They've offered you access.</p>
       </div>
-      
+
     </div>
 
     <div hidden?='{{ UI.Gestalt.GIVING !== ui.gestalt }}'>
