Fix description in new UI

--- a/src/generic_ui/polymer/instance.html
+++ b/src/generic_ui/polymer/instance.html
@@ -20,13 +20,9 @@
       margin: 0;
       color: #888;
     }
-    #instanceId {
-      font-size: 8px;
-      color: #bbb;
-    }
     </style>
 
-    <span id='instanceId'>{{ instance.instanceId }}</span>
+    <span>{{ instance.description }}</span>
 
     <div hidden?='{{ UI.Gestalt.GIVING == ui.gestalt }}'>
 
