Change opacity for offline clients

--- a/src/generic_ui/polymer/contact.html
+++ b/src/generic_ui/polymer/contact.html
@@ -39,8 +39,7 @@
       vertical-align: top;
     }
     .offline {
-      -webkit-filter: grayscale(100%);
-      filter: grayscale(100%);  /* TODO: test this with firefox */
+      opacity: 0.5;
     }
     #words {
       display: inline-block;
