Remove get-give toggle, fix display of multiple instances

--- a/src/generic_ui/polymer/contact.html
+++ b/src/generic_ui/polymer/contact.html
@@ -27,10 +27,6 @@
       -webkit-transition: all 0.23s !important;
       -moz-transition: all 0.23s !important;
       transition: all 0.23s !important;
-      height: 54px;
-    }
-    #frame.expanded {
-      height: 200px;
     }
     #avatar {
       width: 36px; height: 36px;
@@ -47,8 +43,7 @@
     }
     #words {
       display: inline-block;
-      width: 282px; height: 100%;
-      position: absolute;
+      width: 268px;
     }
     h1 {
       display: block;
@@ -60,8 +55,6 @@
     }
     #instances {
       padding: 8px;
-      overflow-y: scroll;
-      height: 100px;
     }
     #actions {
       padding: 8px;
