make the sample apps use Logger.Log rather than the old freedom wrapper

--- a/samples/copypaste-freedom-chat/main.html
+++ b/samples/copypaste-freedom-chat/main.html
@@ -4,6 +4,9 @@
     <title>uProxy sample - copy/paste-initiated peer-to-peer chat</title>
 
     <link rel="stylesheet" href="main.css">
+
+    <script src='lib/logging/logging.js'></script>
+    <script src='lib/freedom/freedom-for-chrome.js'></script>
   </head>
 
   <body>
@@ -114,13 +117,6 @@
 
     <!-- ============================= Scripts ============================= -->
 
-    <script src='lib/freedom/uproxy-core-env.js'></script>
-    <script src='lib/freedom/freedom-for-webpages-for-uproxy.js'
-            data-manifest='freedom-module.json'>
-      {
-        "debug": "info"
-      }
-    </script>
     <script src='main.js'></script>
 
   </body>
