--- a/samples/simple-freedom-chat/main.html
+++ b/samples/simple-freedom-chat/main.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>PeerConnection chat client</title>
+  <script src='lib/logging/logging.js'></script>
   <script src='lib/freedom/freedom-for-chrome.js'></script>
 </head>
 
