--- a/src/generic_ui/polymer/instance.html
+++ b/src/generic_ui/polymer/instance.html
@@ -36,9 +36,11 @@
     <div id='bytesSent' hidden?='{{ instance.bytesSent == 0 }}'>Bytes Sent: {{ instance.bytesSent }}</div>
     <div id='bytesReceived' hidden?='{{ instance.bytesReceived == 0 }}'>Bytes Received: {{ instance.bytesReceived }}</div>
 
+    <!-- TODO(jetpack): replace these state-dependent buttons with
+    simpler UI, exposing state bits directly. -->
     <div id='getControls'>
 
-      <div hidden?='{{ "GRANTED" !== getProxyConsentState() }}'>
+      <div hidden?='{{ !( getConsentState().localRequestsAccessFromRemote && getConsentState().remoteGrantsAccessToLocal ) }}'>
         <button hidden?='{{ instance.access.asProxy }}' on-tap='{{ start }}'>
           Start
         </button>
@@ -48,49 +50,58 @@
         <p>You have access.</p>
       </div>
 
-      <div hidden?='{{ "NONE" !== getProxyConsentState() }}'>
-        <button on-tap='{{ request }}'>
-          Request
-        </button>
-        <p>Request access from contact before connection.</p>
-      </div>
-
-      <div hidden?='{{ "USER_REQUESTED" !== getProxyConsentState() }}'>
+      <div hidden?='{{ !( getConsentState().localRequestsAccessFromRemote && !getConsentState().remoteGrantsAccessToLocal ) }}'>
         <button on-tap='{{ cancelRequest }}'>
           Cancel Request
         </button>
         <span>Requesting access... </span>
       </div>
 
-      <div hidden?='{{ "REMOTE_OFFERED" !== getProxyConsentState() }}'>
-        <button on-tap='{{ accept }}'>Accept Offer</button>
+      <div hidden?='{{ !( !getConsentState().localRequestsAccessFromRemote && getConsentState().remoteGrantsAccessToLocal && !getConsentState().ignoringRemoteUserOffer ) }}'>
+        <button on-tap='{{ request }}'>Accept Offer</button>
         <button on-tap='{{ ignoreOffer }}'>Decline</button>
         <p>They've offered you access.</p>
+      </div>
+
+      <div hidden?='{{ !( !getConsentState().localRequestsAccessFromRemote && getConsentState().remoteGrantsAccessToLocal && getConsentState().ignoringRemoteUserOffer ) }}'>
+        <button on-tap='{{ unignoreOffer }}'>Stop ignoring offers</button>
+        <p>They've offered you access.</p>
+      </div>
+
+      <div hidden?='{{ !( !getConsentState().localRequestsAccessFromRemote && !getConsentState().remoteGrantsAccessToLocal ) }}'>
+        <button on-tap='{{ request }}'>
+          Request
+        </button>
+        <p>Request access from contact before connection.</p>
       </div>
 
     </div>
 
     <div id='giveControls'>
 
-      <div hidden?='{{ "NONE" !== getClientConsentState() }}'>
-        <button on-tap='{{ offer }}'>Offer Access</button>
-        <p>You have not granted them access.</p>
+      <div hidden?='{{ !( getConsentState().localGrantsAccessToRemote && getConsentState().remoteRequestsAccessFromLocal ) }}'>
+        <button on-tap='{{ cancelOffer }}'>Revoke Access</button>
+        <p>You've given them access.</p>
       </div>
 
-      <div hidden?='{{ "USER_OFFERED" !== getClientConsentState() }}'>
+      <div hidden?='{{ !( getConsentState().localGrantsAccessToRemote && !getConsentState().remoteRequestsAccessFromLocal ) }}'>
         <button on-tap='{{ cancelOffer }}'>Cancel Offer</button>
       </div>
 
-      <div
-        hidden?='{{ "REMOTE_REQUESTED" !== getClientConsentState() }}'>
-        <button on-tap='{{ grant }}'>Grant</button>
+      <div hidden?='{{ !( !getConsentState().localGrantsAccessToRemote && getConsentState().remoteRequestsAccessFromLocal && !getConsentState().ignoringRemoteUserRequest ) }}'>
+        <button on-tap='{{ offer }}'>Grant</button>
         <button on-tap='{{ ignoreRequest }}'>Ignore</button>
         <p>They requested access through you.</p>
       </div>
 
-      <div hidden?='{{ "GRANTED" !== getClientConsentState() }}'>
-        <button on-tap='{{ cancelOffer }}'>Revoke Access</button>
-        <p>You've given them access.</p>
+      <div hidden?='{{ !( !getConsentState().localGrantsAccessToRemote && getConsentState().remoteRequestsAccessFromLocal && getConsentState().ignoringRemoteUserRequest ) }}'>
+        <button on-tap='{{ unignoreRequest }}'>Stop ignoring requests</button>
+        <p>They requested access through you.</p>
+      </div>
+
+      <div hidden?='{{ !( !getConsentState().localGrantsAccessToRemote && !getConsentState().remoteRequestsAccessFromLocal ) }}'>
+        <button on-tap='{{ offer }}'>Offer Access</button>
+        <p>You have not granted them access.</p>
       </div>
 
     </div>
