--- a/src/generic_ui/polymer/instance.html
+++ b/src/generic_ui/polymer/instance.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../lib/polymer/polymer.html">
 
-<polymer-element name='uproxy-instance' attributes='userId, instance'>
+<polymer-element name='uproxy-instance' attributes='userId, instance, network'>
   <template>
     <style>
     :host {
