Port WebRtc.PeerConnection to freedom-0.6's core.rtcpeerconnection.
This is a very rough draft with regard to code style, but it does
include a version of simple-freedom-chat that uses the new
WebRtc.PeerConnection.  This is working in Chrome, but not yet in
Firefox.

--- a/samples/simple-freedom-chat/main.html
+++ b/samples/simple-freedom-chat/main.html
@@ -2,7 +2,7 @@
 <head>
   <title>PeerConnection chat client</title>
   <script src='lib/logging/logging.js'></script>
-  <script src='lib/freedom/freedom-for-chrome.js'></script>
+  <script src='lib/freedom/freedom.js'></script>
 </head>
 
 <body>
