Remove "no" button. Move code to generic_ui.

--- a/src/generic_ui/polymer/disconnected.html
+++ b/src/generic_ui/polymer/disconnected.html
@@ -3,15 +3,17 @@
 <head>
   <title>uProxy disconnected</title>
   <style>
-		body {
-			background-color: #E6E6E6
-		}
+    body {
+      background-color: #E6E6E6
+    }
   </style>
+  <script src='../scripts/dependencies.js'></script>
+
   <link rel='import' href='confirm.html'>
 </head>
 
 <body>
-	<uproxy-confirm></uproxy-confirm>
+  <uproxy-confirm></uproxy-confirm>
 </body>
 
 </html>
