Combine BrowserProxyConfig and BrowserAction.

--- a/src/generic_ui/polymer/splash.html
+++ b/src/generic_ui/polymer/splash.html
@@ -1,6 +1,7 @@
 <link rel='import' href='../lib/polymer/polymer.html'>
 <link rel="import" href='button.html'>
 <link rel="import" href='description.html'>
+<link rel="import" href='faq-link.html'>
 
 <polymer-element name='uproxy-splash' attributes=''>
   <template>
@@ -57,6 +58,7 @@
       uProxy helps users protect each other from third parties who may try to
       watch, block, or redirect users' Internet connections.
       </p>
+      <uproxy-faq-link>Help</uproxy-faq-link>
     </div>
 
     <div class='view' id='description' hidden?='{{1!==state}}'>
