Fixed FirefoxBrowserApi & uistatic.

--- a/src/generic_ui/polymer/faq.html
+++ b/src/generic_ui/polymer/faq.html
@@ -1,14 +1,23 @@
 <html>
   <head>
     <title>uProxy FAQ</title>
+    <style>
+      div {
+        height: 500px;
+      }
+    </style>
+
   </head>
 
   <body>
     <div id='q1'>
       Question 1<br>Answer 1
-    </div>
+    </div><br>
     <div id='q2'>
       Question 2<br>Answer 2
+    </div><br>
+    <div id='q3'>
+      Question 3<br>Answer 3
     </div>
   </body>
 </html>
