--- a/src/generic_ui/polymer/faq.html
+++ b/src/generic_ui/polymer/faq.html
@@ -1,4 +1,4 @@
-<!-- TODO (lucyhe): Add content to this FAQ. -->
+<!-- TODO (lucyhe): Add real content to this FAQ. -->
 
 <html>
   <head>
@@ -8,7 +8,6 @@
         height: 500px;
       }
     </style>
-
   </head>
 
   <body>
