make the copypaste sample work with peerconnection

--- a/samples/copypaste-freedom-chat/main.html
+++ b/samples/copypaste-freedom-chat/main.html
@@ -5,8 +5,7 @@
 
     <link rel="stylesheet" href="main.css">
 
-    <script src='lib/logging/logging.js'></script>
-    <script src='lib/freedom/freedom-for-chrome.js'></script>
+    <script src='lib/freedom/freedom.js'></script>
   </head>
 
   <body>
