Add "Get help" link to settings, update FAQ link styling, make # anchors optional

--- a/src/generic_ui/polymer/faq-link.html
+++ b/src/generic_ui/polymer/faq-link.html
@@ -13,10 +13,9 @@ a new tab linking to faq.html#privacy
 
   <template>
     <style>
-      /* TODO (lucyhe): Add CSS for this. */
     </style>
 
-    <button on-click='{{ openFaq }}'><content></content></button>
+    <span on-click='{{ openFaq }}'><content></content></span>
 
   </template>
 
